--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<title>Nina Caducci Photographe</title>
-	
+	<meta name="description" content="Site de Nina Caducci pour services et portfolio de photographe"/>
 </head>
 <body>
 <nav role="navigation" class="top-header">
@@ -38,7 +38,7 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.webp" class="d-block w-100" alt="Une personne croisant la rue">
+				<img srcset ="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.webp 670w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2MOBILE.webp 650w" size="(max-width: 650px) 650px, 670px" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.webp" class="d-block w-100" alt="Une personne croisant la rue">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash2.webp" class="d-block w-100" alt="Un groupe de personnes">
@@ -59,7 +59,7 @@
 </header>
 <section role="contentinfo" id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina2.webp" alt="Nina Carducci">
+		<img class="about-me__image" src="./assets/images/nina2.webp" alt="Nina Carducci">
 	</div>
 	<article id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -72,14 +72,14 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash2.webp" alt="Un concert live"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert1.webp" alt="Un concert live"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash2.webp" alt="Un portrait d'un professionnel en costume"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash2.webp" alt="Une damme souriante"/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash2.webp" alt="Des mains de marriés"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-650adf6991e242.webp" alt="Un portrait d'un jeune homme avec les yeux fermés"/>
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash3.webp" alt="Un couple nouveaux marriés"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash2.webp" alt="Un portrait d'une jeune damme derriere un grillage"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash2.webp" alt="Un chanteau a un concert"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert2.webp" alt="Un chanteau a un concert"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash2.webp" alt="Une damme souriante derriere un ordinateur portable"/>
 		</div>
 	</div>
@@ -95,7 +95,7 @@
 <section id="services">
 	<h2 class="title">Mes services</h2>
 	<div class="container">
-		<article role="service" class="service">
+		<article role="contentinfo" class="service">
 			<div class="service__description">
 				<h3>Shooting photo</h3>
 				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
@@ -106,7 +106,7 @@
 			</div>
 
 		</article>
-		<article role="service" class="service">
+		<article role="contentinfo" class="service">
 			<div class="service__description">
 				<h2>Retouches</h2>
 				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
@@ -116,7 +116,7 @@
 				<span>2 AR par photo</span>
 			</div>
 		</article>
-		<article role="service" class="service">
+		<article role="contentinfo" class="service">
 			<div class="service__description">
 				<h3>Album photos</h3>
 				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
