--- a/index.html
+++ b/index.html
@@ -2,16 +2,28 @@
 <html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">	 -->
+	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css"></noscript>
+	<noscript><link rel="stylesheet" href="./assets/style.css"></noscript>
+	<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"></noscript>
+	<!-- <link rel="stylesheet" href="./assets/style.min.css"> -->
+	<!-- <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet"> -->
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<meta property="og:title" content="Nina Carducci Photographe" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://nina-carducci.github.io" />
+	<meta property="og:image" content="./assets/images/nina2.webp" />
+	<meta name="twitter:card" content="summary"></meta>
+	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script defer src="./assets/maugallery.min.js"></script>
+	<script defer src="./assets/scripts.min.js"></script>
+	<script defer type="application/ld+json" src="./localinfo.json-ld"></script>
 	<title>Nina Caducci Photographe</title>
 	<meta name="description" content="Site de Nina Caducci pour services et portfolio de photographe"/>
 </head>
@@ -24,7 +36,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" loading="lazy" alt="logo instagram"></a></li>
 		</ul>
 	</div>
 </nav>
@@ -38,13 +50,28 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img srcset ="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.webp 670w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2MOBILE.webp 650w" size="(max-width: 650px) 650px, 670px" src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.webp" class="d-block w-100" alt="Une personne croisant la rue">
+				<picture>
+					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.avif" type="image/avif" media="(min-width: 670px)"/>
+					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.webp" type="image/webp" media="(min-width: 670px)"/>
+					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplashMOBILE.webp" type="image/webp"/>
+					<img  srcset ="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash2.webp 4540w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplashMOBILE.webp 650w" sizes="(max-width: 650px) 650px, 4540px" class="d-block  w-100" alt="Une personne croisant la rue">
+				</picture>
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash2.webp" class="d-block w-100" alt="Un groupe de personnes">
+				<picture>
+					<source loading="lazy" srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash2.avif" type="image/avif" media="(min-width: 670px)"/>
+					<source loading="lazy" srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash2.webp" type="image/webp" media="(min-width: 670px)"/>
+					<source loading="lazy" srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash2Mobile.webp" type="image/webp"/>
+					<img loading="lazy" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash2.webp 670w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash2Mobile.webp 650w" class="d-block w-100" alt="Un groupe de personnes">
+				</picture>
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash2.webp" class="d-block w-100" alt="Un couple s'embrassent a un marriage">
+				<picture>
+					<source loading="lazy" srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash2.avif" type="image/avif" media="(min-width: 670px)"/>
+					<source loading="lazy" srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash2.webp" type="image/webp" media="(min-width: 670px)"/>
+					<source loading="lazy" srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash2Mobile.webp" type="image/webp"/>
+					<img loading="lazy" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash2.webp 670w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash2Mobile.webp 650w" class="d-block w-100" alt="Un couple s'embrassent a un marriage">
+				</picture>
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -59,7 +86,7 @@
 </header>
 <section role="contentinfo" id="about">
 	<div class="picture left">
-		<img class="about-me__image" src="./assets/images/nina2.webp" alt="Nina Carducci">
+		<img loading="lazy" class="about-me__image" src="./assets/images/nina2.webp" alt="Nina Carducci">
 	</div>
 	<article id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -72,15 +99,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert1.webp" alt="Un concert live"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash2.webp" alt="Un portrait d'un professionnel en costume"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash2.webp" alt="Une damme souriante"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash2.webp" alt="Des mains de marriés"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-650adf6991e242.webp" alt="Un portrait d'un jeune homme avec les yeux fermés"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash3.webp" alt="Un couple nouveaux marriés"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash2.webp" alt="Un portrait d'une jeune damme derriere un grillage"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert2.webp" alt="Un chanteau a un concert"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash2.webp" alt="Une damme souriante derriere un ordinateur portable"/>
+			<img data-gallery-tag="Concert" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/concerts/concert1-copy1.avif 2448w, ./assets/images/gallery/concerts/concert1Mobile.webp 650w" sizes="(max-width: 650px) 650px, 2448px" src="./assets/images/gallery/concerts/concert1.avif" alt="Un concert live"/>
+			<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash2.avif 4000w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash2Mobile.webp 650w" sizes="(max-width: 650px) 650px, 4000px" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash2.avif"  alt="Un portrait d'un professionnel en costume"/>
+			<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash2.avif 2764w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash2Mobile.webp 650w" sizes="(max-width: 650px) 650px, 2764px" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash2.avif" alt="Une damme souriante"/>
+			<img data-gallery-tag="Mariages" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash2.avif 4453w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash2Mobile.webp 650w" sizes="(max-width: 650px) 650px, 4453px" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash2.avif" alt="Des mains de marriés"/>
+			<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-650adf6991e242.avif 2211w, ./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-650adf6991e242Mobile.webp 650w" sizes="(max-width: 650px) 650px, 2211px" src="./assets/images/gallery/portraits/ade-tunji-rvkhwwzfatq-unsplash-650adf6991e242.avif" alt="Un portrait d'un jeune homme avec les yeux fermés"/>
+			<img data-gallery-tag="Mariages" loading="lazy" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash3.avif 4480w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash3Mobile.webp 650w" sizes="(max-width: 650px) 650px, 4480px" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash3.avif" alt="Un couple nouveaux marriés"/>
+			<img data-gallery-tag="Portrait" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash2.avif 4024w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash2Mobile.webp 650w" sizes="(max-width: 650px) 650px, 4024px" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash2.avif" alt="Un portrait d'une jeune damme derriere un grillage"/>
+			<img data-gallery-tag="Concert" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/concerts/concert2-copy.avif 5233w, ./assets/images/gallery/concerts/concert2Mobile.webp 650w" sizes="(max-width: 650px) 650px, 5233px" src="./assets/images/gallery/concerts/concert2.avif" alt="Un chanteur a un concert"/>
+			<img data-gallery-tag="Entreprises" loading="lazy" class="gallery-item" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash2.avif 3674w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash2Mobile.webp 650w" sizes="(max-width: 650px) 650px, 3674px" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash2.avif" alt="Une damme souriante derriere un ordinateur portable"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -152,9 +179,11 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera2.webp" alt="un appareil photo vintage">
+			<img loading="lazy" class="vintagecamera__img" src="./assets/images/camera2.webp" alt="un appareil photo vintage">
 		</div>
 	</div>
 </footer>
 </body>
 </html>
+
+
